# echo-dzvin-scanner

./: .gitignore  Cargo.toml  Dockerfile  README.md  deployment.yaml
.github/workflows/: app-cd.yml  app-ci.yml  deploy-argocd.yml  docker-image.yml
k8s-specs-bg/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml  security-context.yaml  service.yaml
k8s-specs-bg/blue/: deployment.yaml
k8s-specs-bg/green/: deployment.yaml
k8s-specs-bg/scripts/: switch-blue-to-green.sh  switch-green-to-blue.sh
k8s-specs-canary/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  security-context.yaml  service.yaml
k8s-specs-canary/blue/: deployment.yaml  service.yaml
k8s-specs-canary/common/: configmap.yaml
k8s-specs-canary/green/: deployment-canary.yaml  service.yaml
src/: main.rs
