[package]
name = "echo-dzvin-scanner"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "echo-dzvin-scanner"
path = "src/main.rs"